--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,10 @@
   object-fit: fill;
   margin-bottom: 3px;
 }
-/* .container{
-  display: flex;
-  flex: 1;
-  justify-content: center;
-} */
+
+.main-pagination{
+  text-align: center;
+}
 .main-pagination span{
   border: 1px solid #ccc;
   text-align: center;
@@ -67,6 +66,7 @@
 }
 .skip-box .inputBox{
   padding: 0.375rem 0.35rem;
-  width: 22%;
+  width: 30%;
   text-align: center;
+  display: block;
 }
